<resources>
    <string name="app_name">News</string>
    <string name="breaking_news">Home</string>
    <string name="saved_news">My News</string>
    <string name="search_news">Search News</string>
    <string name="fab">fab</string>
    <string name="source">SOURCE</string>
    <string name="title">TITLE</string>
    <string name="description">DESCRIPTION</string>
    <string name="published_at">PUBLISHED AT</string>
    <string name="news_image">News Image</string>
    <string name="failed_to_connect">Failed to connect</string>
    <string name="retry">Retry</string>
    <string name="search">Search</string>
    <string name="breaking_news_image">Breaking News Image</string>
    <string name="breaking_news_text">Breaking News</string>
    <string name="search_for_news_here">Search For Topics And Articles Here</string>
    <string name="share_article">Share Article</string>
</resources>