<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:contentPadding="5dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

    <ImageView
        android:id="@+id/ivArticleImage"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:scaleType="centerCrop"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/news_image" />

    <TextView
        android:id="@+id/tvSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/source"
        android:textColor="@color/black_or_white"
        android:textStyle="bold"
        android:layout_below="@+id/ivArticleImage" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/title"
        android:textColor="@color/black_or_white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/ivArticleImage"
         />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:maxLines="5"
        android:text="@string/description"
        android:textColor="@color/black_or_white"
        android:layout_below="@+id/tvTitle"
        android:layout_toEndOf="@+id/ivArticleImage"
         />

    <TextView
        android:id="@+id/tvPublishedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/published_at"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/black_or_white"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/tvSource"
         />

    </RelativeLayout>

</androidx.cardview.widget.CardView>